# ds18b20-pico-thermometer

./: .gitignore  README.md
pico_firmware/: CMakeLists.txt  main.c
plotter/: display.py  requirements.txt  temperature_plotter.py
